--- a/src/main/resources/view/css/table.css
+++ b/src/main/resources/view/css/table.css
@@ -5,6 +5,7 @@
 }
 .table-view {
     -fx-background-color: rgb(255, 255, 255);
+    /*-fx-effect: dropshadow(gaussian, rgba(0,0,0,0.25), 10, 0.1, 2, 3);*/
 }
 
 .table-view .column-header-background{
